2007-02-18 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/cairo/CairoGState.m (_set_op): Change cairo operators for
	NSCompositeHighlight and NSCompositePlusDarker.
	* Source/cairo/CairoGState.m (DPSrectstroke::::, DPSrectfill::::,
	DPSrectclip::::): Use cairo_rectangle.
	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
	Changed to work like the other backends for the Gorm palette images.

2007-02-17 Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile.postamble: fix typo

2007-02-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Source GNUstep.sh then use GNUSTEP_SYSTEM_HEADERS
	and GNUSTEP_SYSTEM_LIBRARIES if available rather than using
	hardcoded paths.
	* configure: Regenerated.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Fonts/GNUmakefile (back-resources_INSTALL_DIR): New variable.
	* Fonts/GNUmakefile.postamble (before-uninstall): Updated the
	install rules to not use GNUSTEP_INSTALLATION_DIR.

2007-02-13 Xavier Glattard <xavier.glattard@free.fr>

	configure.ac: opengl fixups for win32

2007-02-11 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/cairo/CairoGState.m (-DPScharpath::, -DPSshow:,
	-GSSetFont:, -GSSetFontSize:, -GSShowText::, -GSShowGlyphs::):
	Protect all font operation from _ct being NULL. 
	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
	Small improvement for scrolling.
	
2007-02-11 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/cairo/CairoGState.m (-GSReadRect:): Implemented this method.

2007-02-10 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/gsc/GSGState.m (-bezierPath): New method.
	* Source/gsc/GSGState.m (-DPSpathbbox::::): Corrected to use new method.
	* Source/cairo/CairoGState.m (-GSSetPatterColor:,
	-pointInMatrixSpace:, -deltaPointInMatrixSpace:,
	-rectInMatrixSpace:, -DPSarct:, -GSReadRect:): New methods to
	override super implementation.
	* Source/cairo/CairoGState.m (-GSCurrentCTM, -GSConcatCTM:,
	-DPStranslate::, -DPSscale::, -DPSrotate:, -DPSinitmatrix,