@@ -1,3 +1,8 @@
+2007-02-24 Graham J Lee <leeg@thaesofereode.info>
+
+	* Source/cairo/CairoGState.m (DPSmoveto::, DPSlineto::,
+	DPSnewpath): check for valid context.
+
 2007-02-18 Fred Kiefer <FredKiefer@gmx.de>
 	
 	* Source/cairo/CairoGState.m (_set_op): Change cairo operators for
